syntax = "proto3";

package category;

option go_package = "northwind/proto/category";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";


service Category {
    
    rpc CategoryByCategoryID(CategoryByCategoryIDRequest) returns (typespb.Category) {
        option (google.api.http) = {
            get: "/v1/category/{categoryID}"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/category/{categoryID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/category"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/category/{categoryID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/category/upsert"
            body: "*"
            
        };
    }
    
}

message CategoryByCategoryIDRequest { 
    int32 categoryID = 1;
}

message DeleteRequest { 
    int32 categoryID = 1;
}

message InsertRequest { 
    int32 categoryID = 1;
    string categoryName = 2;
    google.protobuf.StringValue description = 3;
    bytes picture = 4;
}

message UpdateRequest { 
    // Output only.
    int32 categoryID = 1;
    string categoryName = 2;
    google.protobuf.StringValue description = 3;
    bytes picture = 4;
}

message UpsertRequest { 
    int32 categoryID = 1;
    string categoryName = 2;
    google.protobuf.StringValue description = 3;
    bytes picture = 4;
}
